Fix form inputs in dark mode

--- a/sass/common.scss
+++ b/sass/common.scss
@@ -19,6 +19,8 @@ input,
 textarea,
 select,
 button {
+  color: inherit;
+  background: inherit;
   font: inherit;
 }
 
